# Munafasah-Desk

./: .env.example  .gitignore  README.md  package-lock.json  package.json
.github/workflows/: api-deploy.yml  ci.yml  web-deploy.yml
apps/api/: .dockerignore  Dockerfile  jest.config.js  jest.integration.config.js  jest.setup.ts  package.json  tsconfig.json
apps/api/prisma/: seed.ts
apps/api/src/: app.module.ts  main.ts  prisma.service.ts
apps/api/test/: integration-helpers.ts
apps/web/: .dockerignore  .gitignore  Dockerfile  lighthouserc.json  middleware.ts  next.config.mjs  package.json  playwright.config.ts  vitest.config.ts  vitest.setup.ts
apps/web/__tests__/: middleware.test.ts
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AppHeader.tsx  (+6 more)
docs/: architecture.md  audit-findings.md  audit-prompt.md  local-infra.md  pdpl-controls.md  prd.md  testing-strategy.md
infra/: docker-compose.yml
infra/prometheus/: prometheus.yml
infra/terraform/: README.md  artifact_registry.tf  cloud_run.tf  cloud_scheduler.tf  cloud_sql.tf  iam.tf  main.tf  outputs.tf  secret_manager.tf  variables.tf  wif.tf
prisma/: schema.prisma
tests/load/: README.md
workers/docpipeline/: pyproject.toml
workers/docpipeline/src/docpipeline/: api_client.py  chunking.py  consumer.py  dates.py  etimad.py  extraction.py  main.py  parsing.py  pipeline.py  review_gate.py
workers/docpipeline/tests/: test_chunking.py  test_consumer.py  test_dates.py  test_etimad.py  test_extraction.py  test_parsing.py  test_pipeline.py  test_review_gate.py  test_smoke.py
(+335 files in other folders)
